--- a/Databaselayer/Databaselayer.csproj
+++ b/Databaselayer/Databaselayer.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="RheoDll.cs" />
+    <Compile Include="Saptranfer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
